--- a/eng/hizmetler.html
+++ b/eng/hizmetler.html
@@ -186,7 +186,7 @@
 
     <section class="grid">
       <article class="card">
-        <img src="/assets/images/vr.jpg" alt="VR/AR Solutions" loading="lazy">
+        <img src="/assets/images/vr.png" alt="VR/AR Solutions" loading="lazy">
         <h3>VR/AR Solutions and Interactive Games</h3>
         <p>ISS environment, missions, and spacewalk experience with Oculus Quest 3.</p>
         <a class="btn" href="/vr-ar-interaktif-oyunlar.html">Details</a>
@@ -249,7 +249,7 @@
       </article>
 
       <article class="card">
-        <img src="/assets/images/albamen-book.jpg" alt="Albamen Book" loading="lazy">
+        <img src="/assets/images/albamenvelara.jpg" alt="Albamen Book" loading="lazy">
         <h3>“Albamen and Lara in Space” Book</h3>
         <p>Space encyclopedia for children with AR-supported learning.</p>
         <a class="btn" href="/albamen-kitap.html">Details</a>
