--- a/hizmetler.html
+++ b/hizmetler.html
@@ -16,7 +16,6 @@
 
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- IMPORTANT: keep global site styles -->
   <link rel="stylesheet" href="/assets/css/site.css" />
   <script src="/assets/js/include.js" defer></script>
   <script src="/assets/js/menu-toggle.js" defer></script>
@@ -92,6 +91,16 @@
       transition: transform .18s ease, box-shadow .18s ease, border-color .18s ease;
     }
 
+    /* Görseller için yeni stil (İngilizce versiyonla aynı) */
+    .card img {
+      width: 100%;
+      height: 180px; /* Sabit yükseklik */
+      object-fit: cover;
+      border-radius: 12px;
+      margin-bottom: 5px;
+      background-color: #0f172a; /* Yüklenene kadar görünecek renk */
+    }
+
     .card:hover{
       transform: translateY(-4px);
       border-color: rgba(56, 189, 248, 0.7);
@@ -161,9 +170,7 @@
       opacity:1;
       transform:translateX(0);
     }
-  
-
-</style>
+  </style>
 </head>
 
 <body>
@@ -179,66 +186,70 @@
 
     <section class="grid">
       <article class="card">
-        <meta property="og:image" content="https://albaspace.com.tr/assets/images/vr.jpg" />
-
+        <img src="/assets/images/vr.png" alt="VR/AR Çözümleri" loading="lazy">
         <h3>VR/AR Çözümleri ve İnteraktif Oyunlar</h3>
         <p>Oculus Quest 3 ile ISS ortamı, görevler ve uzay yürüyüşü deneyimi.</p>
         <a class="btn" href="/vr-ar-interaktif-oyunlar.html">Detay</a>
       </article>
 
       <article class="card">
+        <img src="/assets/images/avatar.jpg" alt="Avatar Tasarımı" loading="lazy">
         <h3>Avatar ve Dijital İkiz Tasarımı</h3>
         <p>Dijital mekan + avatarlar ile VR veya mobil app üzerinden interaktif deneyim.</p>
         <a class="btn" href="/avatar-dijital-ikiz.html">Detay</a>
       </article>
 
       <article class="card">
-        <meta property="og:image" content="https://albaspace.com.tr/assets/images/Gemini_Generated_Image_yk5xbwyk5xbwyk5x.png" />
-
+        <img src="/assets/images/Gemini_Generated_Image_yk5xbwyk5xbwyk5x.png" alt="3B Tarama" loading="lazy">
         <h3>3B Tarama ve 3B Mekan Tasarlama</h3>
         <p>3B tarama ile dijital ikiz; 3B yazıcılarla üretim imkanı.</p>
         <a class="btn" href="/3b-tarama-mekan.html">Detay</a>
       </article>
 
       <article class="card">
+        <img src="/assets/images/telescope.jpg" alt="Teleskop Gözlemi" loading="lazy">
         <h3>Teleskopla Güneş, Ay ve Gezegen Gözlemi</h3>
         <p>Gündüz Güneş lekeleri; akşam Ay ve gezegen gözlemleri.</p>
         <a class="btn" href="/teleskop-gozlem.html">Detay</a>
       </article>
 
       <article class="card">
+        <img src="/assets/images/robot-jidoka.jpg" alt="Robot Jidoka" loading="lazy">
         <h3>İnsansı Robot ve Robot Köpek Jidoka İle Etkinlik</h3>
         <p>Jidoka insansı robot + robot köpek ile unutulmaz etkinlik deneyimi.</p>
         <a class="btn" href="/jidoka-etkinlik.html">Detay</a>
       </article>
 
       <article class="card">
-         <meta property="og:image" content="https://albaspace.com.tr/assets/images/2025-12-08_21-01-19.png" />
-
+         <img src="/assets/images/2025-12-08_21-01-19.png" alt="Stratosfer" loading="lazy">
         <h3>Stratosfer Tabakasında Reklam ve Bilimsel Çalışma</h3>
         <p>Stratosfere gönderim, uzay koşulları deneyimi ve geri dönüş.</p>
         <a class="btn" href="/stratosfer-reklam-bilim.html">Detay</a>
       </article>
 
       <article class="card">
+        <img src="/assets/images/planetarium.jpg" alt="Mobil Planetaryum" loading="lazy">
         <h3>Mobil Planetaryum İle Astronomi Etkinliği</h3>
         <p>6×6 m şişme gezegenevi içinde 180° uzay içerikleri.</p>
         <a class="btn" href="/mobil-planetaryum.html">Detay</a>
       </article>
 
       <article class="card">
+        <img src="/assets/images/nasa-cern.jpg" alt="NASA CERN Turları" loading="lazy">
         <h3>NASA ve CERN Turları</h3>
         <p>Özel tur programları ile tesis ziyareti ve benzersiz deneyim.</p>
         <a class="btn" href="/nasa-cern-turlari.html">Detay</a>
       </article>
 
       <article class="card">
+        <img src="/assets/images/astronauts.jpg" alt="Türk Astronotlar" loading="lazy">
         <h3>Türk Astronotlar İle Etkinlik</h3>
         <p>Alper Gezeravcı ve Tuva Cihangir Atasever ile sunum ve buluşma.</p>
         <a class="btn" href="/turk-astronotlar-etkinlik.html">Detay</a>
       </article>
 
       <article class="card">
+        <img src="/assets/images/albamenvelara.jpg" alt="Albamen Kitabı" loading="lazy">
         <h3>“Albamen ve Lara Uzayda” Kitabı</h3>
         <p>AR destekli öğrenme ile çocuklar için uzay ansiklopedisi.</p>
         <a class="btn" href="/albamen-kitap.html">Detay</a>
@@ -296,7 +307,8 @@
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
           if (!localStorage.getItem("albaCookieSeen")) {
-              document.getElementById("cookie-overlay").style.display = "flex";
+              const overlay = document.getElementById("cookie-overlay");
+              if (overlay) overlay.style.display = "flex";
           }
       });
 
@@ -308,7 +320,8 @@
           acceptBtn.addEventListener("click", function() {
               // Butona basıldığını hissettirmek için ufak bir bekleme (opsiyonel)
               setTimeout(() => {
-                  document.getElementById("cookie-overlay").style.display = "none";
+                  const overlay = document.getElementById("cookie-overlay");
+                  if (overlay) overlay.style.display = "none";
                   // Kullanıcının gördüğünü tarayıcıya kaydet
                   localStorage.setItem("albaCookieSeen", "true");
               }, 200);
