--- a/vr-ar-interaktif-oyunlar.html
+++ b/vr-ar-interaktif-oyunlar.html
@@ -11,7 +11,7 @@
   <meta property="og:site_name" content="ALBA Space" />
   <meta property="og:title" content="VR/AR Çözümleri ve İnteraktif Oyunlar | ALBA Space" />
   <meta property="og:description" content="Oculus Quest 3 ile astronot avatarı deneyimi, ISS ortamı ve uzay yürüyüşü görevleri: etkinlik ve eğitimler için VR/AR çözümü." />
-  <meta property="og:image" content="https://albaspace.com.tr/assets/images/anasayfa-hero.jpg" />
+  <meta property="og:image" content="https://albaspace.com.tr/assets/images/vr.jpg" />
   <meta property="og:url" content="https://albaspace.com.tr/vr-ar-interaktif-oyunlar.html" />
 
   <meta name="twitter:card" content="summary_large_image" />
